kubernetes/main/apps/media/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: _
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    vpn.home.arpa/tunnel: ivpn
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
